# aspera2algorithm

./: CMakeLists.txt  README.md
CSPSimulation/33st/: I.cpp  II.cpp  III.cpp  IV.cpp  V.cpp
Part1-BasicAlgorithm/BinarySearch/790-cubeRootOfNum/: cubeRootOfNum.c
Part1-BasicAlgorithm/BitOperate/: 801-NumOfOneInBinary.c
Part1-BasicAlgorithm/HighPrecision/792-highPrecisionSub/: highPrecisionSub.c
Part1-BasicAlgorithm/HighPrecision/793-highPrecisonMulti/: highPrecisionMulti.c
Part1-BasicAlgorithm/PrefixSum/796-sumOfChildMatrix/: sumOfChildMatrix.c
Part1-BasicAlgorithm/QuickSort/786-kstNumber/: kstNumber.cpp
Part1-BasicAlgorithm/RangeMerge/803-rangeMerge/: rangeMerge(Boosted).c  rangeMerge.c
Part1-BasicAlgorithm/TwoPointer/2816-judgeChildSequence/: judgeChildSequence.c
Part1-BasicAlgorithm/TwoPointer/799-LCNS/: lcns.c
Part2-DataStructure/DoubleLinkedList/827-doubleLinkedList/: doubleLinkedList.c
Part2-DataStructure/Hashtable/840-simulatedHashtable/: simulatedHashtable.c
Part2-DataStructure/Hashtable/841-stringHash/: stringHash.c
Part2-DataStructure/Heap/838-heapSort/: 838-heapSort.c
Part2-DataStructure/Heap/839-simulatedHeap/: 839-simulatedHeap.c
Part2-DataStructure/KMP/831-stringKMP/: stringKMP.c
Part2-DataStructure/MonotonicQueue/154-slidingWindow/: slidingWindow.c
Part2-DataStructure/MonotonicStack/830-monotonicStack/: monotonicStack.c
Part2-DataStructure/Queue/829-simulatedQueue/: simulatedQueue.c
Part2-DataStructure/Stack/3302-solveExpression/: solveExpression.c
basic/785-qsort/: question.md
basic/Discretization/: sumOfRange.c
(+51 files in other folders)
