add_executable(new_target Part2-DataStructure/Trie/835-trieStringCount/trieStringCount.c
        Part2-DataStructure/Trie/143-maximumXORPair/maximumXORPair.c
        Part3-SearchAndGraphTheory/Dijkstra/849-dijkstraForShortestI/dijkstraForShortestI.cpp
        Part3-SearchAndGraphTheory/spfa/852-judgeMinusCircle/judgeMinusCircle.cpp)
